crates/rome_js_formatter/tests/specs/prettier/js/destructuring-private-fields/bindings.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
expression: bindings.js
---
# Input
```js
class C {
  #x = 1;
  m() {
    const {#x: x} = this;
  }
}

```

# Output
```js
class C {
  #x = 1;
  m() {
    const { #x: x } = this;
  }
}

```

# Errors
```
error[SyntaxError]: expected an identifier, a member name, or a rest pattern but instead found '#x: x'
  ┌─ bindings.js:4:12
  │
4 │     const {#x: x} = this;
  │            ^^^^^ Expected an identifier, a member name, or a rest pattern here


```


